--- a/app/src/main/res/layout/fragment_body_part.xml
+++ b/app/src/main/res/layout/fragment_body_part.xml
@@ -3,5 +3,6 @@
     <ImageView
         android:id="@+id/body_part_image_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="?android:attr/selectableItemBackground"/>
 </layout>
